# lysp

./: .pre-commit-config.yaml  README.md  pyproject.toml
examples/: append.lysp  apply.lysp  attr.lysp  constants.lysp  do.lysp  fact.lysp  ids.lysp  import.lysp  list.lysp  tests.lysp
src/lysp/: __init__.py  __main__.py  errors.py  forms.py  parser.py  transpiler.py
tests/: test_parser.py  test_transpiler.py
